--- a/style.css
+++ b/style.css
@@ -118,11 +118,6 @@
     cursor: pointer;
 }
 
-.checkbox-lg {
-    width: 30px !important;
-    height: 30px !important;
-}
-
 .checkbox:checked {
     border: 1px solid #44B328;
     background-color: transparent;
@@ -130,8 +125,8 @@
 
 .checkbox:checked:before {
     position: absolute;
-    left: 1.5px;
-    top: -1.5px;
+    left: 2.5px;
+    top: -0.5px;
     display: block;
     content: '\2713';
     text-align: center;
@@ -139,6 +134,11 @@
     font-family: Arial;
     font-size: 10px;
     font-weight: 800;
+}
+
+.checkbox-lg {
+    width: 30px !important;
+    height: 30px !important;
 }
 
 .checkbox-lg:checked:before {
@@ -154,7 +154,7 @@
 
 .checkbox-18:checked:before {
     top: 0px !important;
-    left: 2px !important;
+    left: 2.5px !important;
     font-size: 12px;
 }
 
@@ -165,8 +165,8 @@
 
 .checkbox-primary:checked:before {
     color: #615EFF !important;
-    top: 0px !important;
-    left: 2.5px !important;
+    top: 0.5px !important;
+    left: 3px !important;
 }
 
 .checkbox-primary:checked {
@@ -438,6 +438,56 @@ select {
     height: 54px; 
     background: #615EFF; 
     border-radius: 9px;
+}
+
+.drag-drop {
+    background: rgba(97, 94, 255, 0.05);
+    border: 1.5px dashed rgba(97, 94, 255, 0.4);
+    border-radius: 15px;
+    position: relative;
+}
+
+.drag-file-input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.tous-les-documents-table {
+    margin-bottom: 0 !important;
+}
+
+.tous-les-documents-table tbody tr {
+    border-bottom: 1.5px solid rgba(209, 209, 209, 0.5);
+}
+
+.tous-les-documents-table tbody tr:last-child {
+    border-bottom: none !important;
+}
+
+.tous-les-documents-table tbody tr td {
+    background-color: white;
+    vertical-align: middle !important;
+}
+
+.tous-les-documents-table tbody tr:first-child td:first-child {
+    border-top-left-radius: 15px !important;
+}
+
+.tous-les-documents-table tbody tr:first-child td:last-child {
+    border-top-right-radius: 15px !important;
+}
+
+.tous-les-documents-table tbody tr:last-child td:first-child {
+    border-bottom-left-radius: 15px !important;
+}
+
+.tous-les-documents-table tbody tr:last-child td:last-child {
+    border-bottom-right-radius: 15px !important;
 }
 
 .tc-grey {
