--- a/style.css
+++ b/style.css
@@ -78,6 +78,34 @@
     border-bottom-right-radius: 10px !important;
 }
 
+.tbl-signer {
+    border: 1px solid #D1D1D1; 
+    border-collapse: collapse;
+    margin-top: 15px;
+}
+
+.tbl-signer tr td {
+    padding: 0;
+    height: 62px;
+}
+
+.tbl-same {
+    min-width: 670px;
+    margin-bottom: 10px !important;
+}
+
+.tbl-same tbody tr td {
+    width: 25%;
+}
+
+.tbl-same-div {
+    margin-top: 21px;
+    padding: 5px !important;
+    border-radius: 10px; 
+    box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.03);
+    background-color: white;
+}
+
 .tbl-43 {
     width: 100% !important;
 }
@@ -98,6 +126,33 @@
 
 .tbl-43 tr td {
     padding: 17px;
+}
+
+.selected-row {
+    background: #ECF7EA !important;
+}
+
+.sbar {
+    background: #F0F1F3 !important;
+    box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.03);
+    border-radius: 10px;
+}
+
+.sbar button {
+    background: #F0F1F3 !important;
+}
+
+.sbar-input {
+    text-align: left !important;
+    height: 100% !important;
+    background: #F0F1F3 !important;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+}
+
+.sbar-input::placeholder {
+    color: #B7B2BD;
 }
 
 .checkbox {
@@ -281,10 +336,14 @@
 
 .ddm-4.show {
     top: 28px !important;
-    left: -69px !important;
+    left: -49px !important;
     border-radius: 10px;
     border: none;
     box-shadow: 0px 0px 20px 20px rgb(235, 235, 235, 0.25);
+}
+
+.mr-28 {
+    margin-right: 28px;
 }
 
 .active-row {
@@ -319,17 +378,6 @@
 
 #expand-row td:last-child {
     border-bottom-right-radius: 10px !important;
-}
-
-.tbl-signer {
-    border: 1px solid #D1D1D1; 
-    border-collapse: collapse;
-    margin-top: 15px;
-}
-
-.tbl-signer tr td {
-    padding: 0;
-    height: 62px;
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
@@ -406,10 +454,6 @@ select {
 
 .qr-sidebar div div {
     color: #200E32;
-}
-
-.tbl-same tbody tr td {
-    width: 25%;
 }
 
 .col-div {
@@ -571,6 +615,10 @@ select {
         font-size: 9px !important;
         line-height: 11px !important;
     }
+
+    .mr-28 {
+        margin-right: 22px;
+    }
     
     .fs-11 {
         font-size: 10px !important;
@@ -615,11 +663,15 @@ select {
 
 @media screen and (max-width: 1280px) {
 
+    .mr-28 {
+        margin-right: 16px;
+    }
+    
     .fs-10 {
         font-size: 8px !important;
         line-height: 10px !important;
     }
-    
+
     .fs-11 {
         font-size: 9px !important;
         line-height: 11px !important;
@@ -670,6 +722,10 @@ select {
 
 @media screen and (max-width: 890px) {
 
+    .mr-28 {
+        margin-right: 10px;
+    }
+    
     .ptw-btn-44 {
         width: 160px;
     }
