--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@
     background-color: #F9F9FF;
 }
 
+.tbl-even tr td {
+    vertical-align: middle !important;
+}
+
 .tbl-even tr td:last-child {
     text-align: right !important;
 }
@@ -85,7 +89,7 @@
 }
 
 .tbl-signer tr td {
-    padding: 0;
+    padding: 0 !important;
     height: 62px;
 }
 
@@ -260,6 +264,18 @@
     border: 1px solid #615EFF !important;
 }
 
+.checkbox-circle {
+    border-radius: 50% !important;
+    width: 20px !important;
+    height: 20px !important;
+}
+
+.checkbox-circle:checked:before {
+    left: 3.5px !important;
+    top: 1px !important;
+    font-size: 12px !important;
+ }
+ 
 .ddm-1 {
     min-width: 99px !important;
     height: 69px;
@@ -570,6 +586,37 @@ input[type="date"]::placeholder {
     color: rgba(196, 196, 196, 0.5);
 }
 
+.progress1 {
+    border-radius: 30px;
+    display: -ms-flexbox;
+    display: flex;
+    height: 7px;
+    font-size: 0.75rem;
+}
+
+.progress-bar1 {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: center;
+    justify-content: center;
+    color: white;
+    text-align: center;
+    white-space: nowrap;
+    border-radius: 30px;
+    transition: width 0.6s ease;
+}
+
+.progress-circle {
+	width:12px;
+	height:12px;
+	position:absolute;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.07);
+	border-radius:50%;
+	right:0;
+}
+
 .tc-grey {
     color: rgba(92, 87, 97, 0.5);
 }
@@ -659,10 +706,6 @@ input[type="date"]::placeholder {
         border-radius: 10px;
         border: none;
         box-shadow: 0px 0px 20px 20px rgb(235, 235, 235, 0.25);
-    }
-    
-    .scroll-adj {
-        overflow-x: scroll;
     }
 }
 
@@ -819,6 +862,11 @@ input[type="date"]::placeholder {
 
 @media screen and (max-width: 890px) {
 
+    .qr-sidebar div.d-flex {
+        padding-left: 5% !important;
+        padding-right: 5% !important;
+    }
+    
     .qr-sidebar div div.fs-12 {
         font-size: 8px !important;
         line-height: 10px !important;
