--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     font-style: normal;
 }
 
+a:-webkit-any-link {
+    text-decoration: none !important;
+}
+
 @font-face {
     font-family: 'Amalfi Coast';
     font-style: normal;
@@ -73,6 +77,7 @@
 
 .tbl-even tr td {
     vertical-align: middle !important;
+    height: 54px;
 }
 
 .tbl-even tr td:last-child {
